objects/Product2__x.object
<CustomObject>
    <fields>
        <fullName>Budget_Group_Code_c__c</fullName>
        <externalDeveloperName>Budget_Group_Code__c</externalDeveloperName>
        <label>Budget Group (Code)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Group_c__c</fullName>
        <externalDeveloperName>Budget_Group__c</externalDeveloperName>
        <label>Budget Group</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanUseRevenueSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CanUseRevenueSchedule</externalDeveloperName>
        <label>Revenue Scheduling Enabled</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseEntitlement_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CaseEntitlement__c</externalDeveloperName>
        <inlineHelpText>Determines whether this product (in the context of a Service Contract) should generate a Case Entitlement.</inlineHelpText>
        <label>Generate Case Entitlement</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CatalogProfile_c__c</fullName>
        <externalDeveloperName>CatalogProfile__c</externalDeveloperName>
        <label>Catalog Profile</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$$-OSS-SM</fullName>
                    <label>$$-OSS-SM - R/3 Notifications</label>
                </value>
                <value>
                    <fullName>000000001</fullName>
                    <label>000000001 - General Catalog Profile</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - NO DETERMIDED</label>
                </value>
                <value>
                    <fullName>A91</fullName>
                    <label>A91 - CONNECT-UP</label>
                </value>
                <value>
                    <fullName>A92</fullName>
                    <label>A92 - EPISEQ SOFTWARE</label>
                </value>
                <value>
                    <fullName>A94</fullName>
                    <label>A94 - EVISIGHT COMPACT APPLICATION</label>
                </value>
                <value>
                    <fullName>A96</fullName>
                    <label>A96 - VIDAS 3 SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA8</fullName>
                    <label>AA8 - FILMARRAY SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA9</fullName>
                    <label>AA9 - EMAG SOFTWARE</label>
                </value>
                <value>
                    <fullName>B11</fullName>
                    <label>B11 - IMMUNO MICRO PLAQUES</label>
                </value>
                <value>
                    <fullName>B12</fullName>
                    <label>B12 - NUCLISENS (Without transfer)</label>
                </value>
                <value>
                    <fullName>B13</fullName>
                    <label>B13 - DGV</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <label>B14 - BRAZIL CHEM HEMO MICROELISA</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                    <label>B15 - BRAZIL IMMUNOSEROLOGY PRODUCTS</label>
                </value>
                <value>
                    <fullName>B16</fullName>
                    <label>B16 - PPM BRAZIL PRODUCTS</label>
                </value>
                <value>
                    <fullName>B18</fullName>
                    <label>B18 - BTA REAGENT CLINICAL USE</label>
                </value>
                <value>
                    <fullName>B19</fullName>
                    <label>B19 - BTA REAGENT INDUSTRIAL USE</label>
                </value>
                <value>
                    <fullName>B20</fullName>
                    <label>B20 - MB BACT REAGENT</label>
                </value>
                <value>
                    <fullName>B21</fullName>
                    <label>B21 - OBSOLETE  ELISA INDUSTRY</label>
                </value>
                <value>
                    <fullName>B22</fullName>
                    <label>B22 - VIKIA/BIONEXIA</label>
                </value>
                <value>
                    <fullName>B23</fullName>
                    <label>B23 - FOOD EXPERT</label>
                </value>
                <value>
                    <fullName>B24</fullName>
                    <label>B24 - ARGENTINA MICRO PLATES</label>
                </value>
                <value>
                    <fullName>B25</fullName>
                    <label>B25 - IMMUNO BMX MICROELISA</label>
                </value>
                <value>
                    <fullName>B26</fullName>
                    <label>B26 - IMMUNO OTHERS MICROELISA</label>
                </value>
                <value>
                    <fullName>B27</fullName>
                    <label>B27 - OBSOLETE IMMUNOASSAYS DURHAM</label>
                </value>
                <value>
                    <fullName>B28</fullName>
                    <label>B28 - OBSOLETE NUCLISENS ECL REAGENT</label>
                </value>
                <value>
                    <fullName>B29</fullName>
                    <label>B29 - NUCLISENS ISOLATION REAGENTS</label>
                </value>
                <value>
                    <fullName>B3</fullName>
                    <label>B3 - GEN PROBE</label>
                </value>
                <value>
                    <fullName>B30</fullName>
                    <label>B30 - NUCLISENS EASYQ REAGENTS</label>
                </value>
                <value>
                    <fullName>B31</fullName>
                    <label>B31 - APIWEB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categories_c__c</fullName>
        <externalDeveloperName>Categories__c</externalDeveloperName>
        <label>Categories</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immunoassay - Chemistry</fullName>
                </value>
                <value>
                    <fullName>Immunoassay - Decentralized</fullName>
                </value>
                <value>
                    <fullName>Immunoassay - Micro</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
                <value>
                    <fullName>Molecular</fullName>
                </value>
                <value>
                    <fullName>Commercial Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChineseLocalName_c__c</fullName>
        <externalDeveloperName>ChineseLocalName__c</externalDeveloperName>
        <label>Chinese Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_c__c</fullName>
        <externalDeveloperName>Competitor__c</externalDeveloperName>
        <label>Competitor</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CzechLocalName_c__c</fullName>
        <externalDeveloperName>CzechLocalName__c</externalDeveloperName>
        <label>Czech Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dangerous_c__c</fullName>
        <externalDeveloperName>Dangerous__c</externalDeveloperName>
        <label>Dangerous Indicator</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>001 - Relevant for dangerous goods, checks, and documents</label>
                </value>
                <value>
                    <fullName>CAO</fullName>
                    <label>CAO - Dangerous Air Cargo</label>
                </value>
                <value>
                    <fullName>EXE</fullName>
                    <label>EXE - Dangerous Air EXE</label>
                </value>
                <value>
                    <fullName>G00</fullName>
                    <label>G00 - Relevant for dangerous goods</label>
                </value>
                <value>
                    <fullName>G0P</fullName>
                    <label>G0P - Relevant for dangerous goods and documents</label>
                </value>
                <value>
                    <fullName>GP0</fullName>
                    <label>GP0 - Relevant for dangerous goods and checks</label>
                </value>
                <value>
                    <fullName>GPP</fullName>
                    <label>GPP - Relevant for dangerous goods, checks, and documents</label>
                </value>
                <value>
                    <fullName>PAX</fullName>
                    <label>PAX - Dangerous Air PAX</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Product Description</label>
        <length>4000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Divisions_c__c</fullName>
        <externalDeveloperName>Divisions__c</externalDeveloperName>
        <label>Restricted to Divisions</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>040</fullName>
                </value>
                <value>
                    <fullName>050</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERS_c__c</fullName>
        <externalDeveloperName>ERS__c</externalDeveloperName>
        <label>ERS</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalDataSourceId__c</fullName>
        <externalDeveloperName>ExternalDataSourceId</externalDeveloperName>
        <label>External Data Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>250</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <externalDeveloperName>Family</externalDeveloperName>
        <label>Product Family</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - Culture</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B - ID AST Automated</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - ID AST Manual</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D - Blood Culture</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>E - Micro Lab Automation</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>F - Quality Indicators</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>G - Cytometry</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>H -Endonext</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>L - Bioball</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>M - Clinical Chemistry &amp; Haematology</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>P - Molecular</label>
                </value>
                <value>
                    <fullName>Q</fullName>
                    <label>Q - Biofire</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>R - ImmunoAssays</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>S - Serology, EIA and Others</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>T - OT Microplate Systems</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>W - Commercial Services</label>
                </value>
                <value>
                    <fullName>X</fullName>
                    <label>X - Sequencing</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_c__c</fullName>
        <externalDeveloperName>Family__c</externalDeveloperName>
        <label>Family</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCESSORY</fullName>
                </value>
                <value>
                    <fullName>BARCODE</fullName>
                </value>
                <value>
                    <fullName>COMPUTER</fullName>
                </value>
                <value>
                    <fullName>CONNECTION</fullName>
                </value>
                <value>
                    <fullName>CONSUMABLE</fullName>
                </value>
                <value>
                    <fullName>DOCUMENTATION</fullName>
                </value>
                <value>
                    <fullName>MAIN MODULE</fullName>
                </value>
                <value>
                    <fullName>MONITOR</fullName>
                </value>
                <value>
                    <fullName>POWER SUPPLY</fullName>
                </value>
                <value>
                    <fullName>PRINTER</fullName>
                </value>
                <value>
                    <fullName>PROBE</fullName>
                </value>
                <value>
                    <fullName>PROBE EQUIPT</fullName>
                </value>
                <value>
                    <fullName>PROBE WO EQUIPT</fullName>
                </value>
                <value>
                    <fullName>SECONDARY MODULE</fullName>
                </value>
                <value>
                    <fullName>SERIALIZED SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>STAND ALONE</fullName>
                </value>
                <value>
                    <fullName>SYSTEM</fullName>
                </value>
                <value>
                    <fullName>UNDEFINED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FrenchLocalName_c__c</fullName>
        <externalDeveloperName>FrenchLocalName__c</externalDeveloperName>
        <label>French Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functions_c__c</fullName>
        <externalDeveloperName>Functions__c</externalDeveloperName>
        <label>Functions</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Pathogens</fullName>
                </value>
                <value>
                    <fullName>Blood Culture</fullName>
                </value>
                <value>
                    <fullName>Commercial Sterility</fullName>
                </value>
                <value>
                    <fullName>Endotoxin Detection</fullName>
                </value>
                <value>
                    <fullName>Environmental Control</fullName>
                </value>
                <value>
                    <fullName>Extraction</fullName>
                </value>
                <value>
                    <fullName>ID/AST</fullName>
                </value>
                <value>
                    <fullName>Integrated platform</fullName>
                </value>
                <value>
                    <fullName>Lab Automation</fullName>
                </value>
                <value>
                    <fullName>LIMS</fullName>
                </value>
                <value>
                    <fullName>Manual Pathogen</fullName>
                </value>
                <value>
                    <fullName>Manual Sterility</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>PCR Set up</fullName>
                </value>
                <value>
                    <fullName>Pre- Analystical</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>QC Organisms</fullName>
                </value>
                <value>
                    <fullName>Quality Indicators</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Staining</fullName>
                </value>
                <value>
                    <fullName>Sterility</fullName>
                </value>
                <value>
                    <fullName>TB</fullName>
                </value>
                <value>
                    <fullName>Temperature Monitoring</fullName>
                </value>
                <value>
                    <fullName>Thermocycler</fullName>
                </value>
                <value>
                    <fullName>Tuberculosis</fullName>
                </value>
                <value>
                    <fullName>Urine Screening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GermanLocalName_c__c</fullName>
        <externalDeveloperName>GermanLocalName__c</externalDeveloperName>
        <label>German Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HungarianLocalName_c__c</fullName>
        <externalDeveloperName>HungarianLocalName__c</externalDeveloperName>
        <label>Hungarian Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>Active</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItalianLocalName_c__c</fullName>
        <externalDeveloperName>ItalianLocalName__c</externalDeveloperName>
        <label>Italian Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KoreanLocalName_c__c</fullName>
        <externalDeveloperName>KoreanLocalName__c</externalDeveloperName>
        <label>Korean Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocalProductName_c__c</fullName>
        <externalDeveloperName>LocalProductName__c</externalDeveloperName>
        <label>Local Product Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MandatoryReturn_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>MandatoryReturn__c</externalDeveloperName>
        <inlineHelpText>This product is subject to mandatory return?</inlineHelpText>
        <label>Returnable</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markets_c__c</fullName>
        <externalDeveloperName>Markets__c</externalDeveloperName>
        <label>Markets</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0010</fullName>
                </value>
                <value>
                    <fullName>0020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Group_c__c</fullName>
        <externalDeveloperName>Material_Group__c</externalDeveloperName>
        <label>Material Group</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfRevenueInstallments__c</fullName>
        <externalDeveloperName>NumberOfRevenueInstallments</externalDeveloperName>
        <label>Number Of Revenue Installments</label>
        <precision>3</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldMaterial_c__c</fullName>
        <externalDeveloperName>OldMaterial__c</externalDeveloperName>
        <inlineHelpText>The link with the old material (defined in SAP).</inlineHelpText>
        <label>Old Material</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyReplacProd_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OpptyReplacProd__c</externalDeveloperName>
        <label>Opportunity Replacing Product</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PolishLocalName_c__c</fullName>
        <externalDeveloperName>PolishLocalName__c</externalDeveloperName>
        <label>Polish Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PortugueseLocalName_c__c</fullName>
        <externalDeveloperName>PortugueseLocalName__c</externalDeveloperName>
        <label>Portuguese Local Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <externalDeveloperName>ProductCode</externalDeveloperName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Code_c__c</fullName>
        <externalDeveloperName>Product_Group_Code__c</externalDeveloperName>
        <label>Product Group (Code)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group_c__c</fullName>
        <externalDeveloperName>Product_Group__c</externalDeveloperName>
        <label>Product Group</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>A02PBC</fullName>
                    <label>A02PBC - Prepared BiPlate media chromID</label>
                </value>
                <value>
                    <fullName>H01111</fullName>
                    <label>H01111 - Endotoxin Detection Instrument Sales New</label>
                </value>
                <value>
                    <fullName>H011A0</fullName>
                    <label>H011A0 - Endotoxin Detection Reagents Consumables</label>
                </value>
                <value>
                    <fullName>H02166</fullName>
                    <label>H02166 - Endotoxin demasking Research&amp;Lab Service</label>
                </value>
                <value>
                    <fullName>H02167</fullName>
                    <label>H02167 - Endotoxin demasking Services Training</label>
                </value>
                <value>
                    <fullName>P48140</fullName>
                    <label>P48140 - EasyStream Software</label>
                </value>
                <value>
                    <fullName>P48212</fullName>
                    <label>P48212 - Thermocycler Instrument Reconditioned</label>
                </value>
                <value>
                    <fullName>P48230</fullName>
                    <label>P48230 - Thermocycler Instrument Contracts</label>
                </value>
                <value>
                    <fullName>P48311</fullName>
                    <label>P48311 - eMAG Instrument Sales New</label>
                </value>
                <value>
                    <fullName>P48312</fullName>
                    <label>P48312 - eMAG Instrument Sales Reconditioned</label>
                </value>
                <value>
                    <fullName>P48320</fullName>
                    <label>P48320 - eMAG Instrument Rentals</label>
                </value>
                <value>
                    <fullName>P48330</fullName>
                    <label>P48330 - eMAG Instrument Contracts</label>
                </value>
                <value>
                    <fullName>P48340</fullName>
                    <label>P48340 - eMAG Software</label>
                </value>
                <value>
                    <fullName>P483B0</fullName>
                    <label>P483B0 - Extraction Reagents MiniMAG</label>
                </value>
                <value>
                    <fullName>P48661</fullName>
                    <label>P48661 - Argene Connect Service Spare part</label>
                </value>
                <value>
                    <fullName>P48662</fullName>
                    <label>P48662 - Argene Connect Service Labour</label>
                </value>
                <value>
                    <fullName>P48663</fullName>
                    <label>P48663 - Argene Connect Service Contract</label>
                </value>
                <value>
                    <fullName>P48667</fullName>
                    <label>P48667 - Argene Connect Service Training</label>
                </value>
                <value>
                    <fullName>Y01140</fullName>
                    <label>Y01140 - BioNumerics Software</label>
                </value>
                <value>
                    <fullName>Y02140</fullName>
                    <label>Y02140 - BNEXT Software</label>
                </value>
                <value>
                    <fullName>P48111</fullName>
                    <label>P48111 - EasyStream Instrument Sales New</label>
                </value>
                <value>
                    <fullName>P48112</fullName>
                    <label>P48112 - EasyStream Instruments Sales Recondition</label>
                </value>
                <value>
                    <fullName>P48120</fullName>
                    <label>P48120 - EasyStream Instruments Rentals</label>
                </value>
                <value>
                    <fullName>P48130</fullName>
                    <label>P48130 - EasyStream Instrument Contracts</label>
                </value>
                <value>
                    <fullName>P481A0</fullName>
                    <label>P481A0 - Real-Time Reagents Transplant</label>
                </value>
                <value>
                    <fullName>P481B0</fullName>
                    <label>P481B0 - Real-Time Reagents Respiratory</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Hierarchy_c__c</fullName>
        <externalDeveloperName>Product_Hierarchy__c</externalDeveloperName>
        <label>Product Hierarchy</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID_c__c</fullName>
        <externalDeveloperName>Product_ID__c</externalDeveloperName>
        <label>Product ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuantityUnitOfMeasure__c</fullName>
        <externalDeveloperName>QuantityUnitOfMeasure</externalDeveloperName>
        <label>Quantity Unit Of Measure</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ST</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>KIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
</CustomObject>